2006-10-27  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh : Remove duplicated build_all function.
	(copy_headers) : Add error handlers.
	* build-cegcc.sh (copy_w32api_headers) : Add missing ${BASE_DIRECTORY}.
	Add error handler.

2006-10-12  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh : Make ${BUILD_DIR} absolute in default case.
	* build-cegcc.sh : Likewise.
	(build_gcc) : Switch to pushd/popd.

2006-10-10  Danny Backx <dannybackx@users.sourceforge.net>
	* w32api-3.7 : Remove. It is still possible to recover
	it from SVN by using the svn versioning mechanisms,
	e.g. by referring to version 708.

2006-10-10  Pedro Alves  <pedro_alves@portugalmail.pt>

        * build-cegcc.sh : Fix w32api build option.
	(build_gcc) : Pass --without-newlib, so when we have a combined
	tree, newlib isn't built twice.
	
2006-10-10  Pedro Alves  <pedro_alves@portugalmail.pt>

        * build-cegcc.sh : Fix cegccthrd build option.
	(build_dummy_cegccdll) : Call cegcc/fakecegccdll/install.sh.
	This change, along with the previous commits,
	removes the need for the manual editing 
	of libstc++/configure, to remove the 
	"Link tests are not allowed after GCC_NO_EXECUTABLES." error.
	
2006-10-10  Pedro Alves  <pedro_alves@portugalmail.pt>

        * build-cegcc.sh (build_newlib) : libgloss is now $noconfigdir'ed.
	Build with simple 'make'/'make install'.

2006-10-10  Pedro Alves  <pedro_alves@portugalmail.pt>

        * build-cegcc.sh : Implement script command line 
	parameters defaults. Reflect the target name change
	to arm-wince-cegcc.

2006-10-05  Pedro Alves  <pedro_alves@portugalmail.pt>

        * binutils : Update to binutils mainline.